feat(controllers): Add statistics controller - OpenAPI docs for `GET /statistics`
